[style] fix button card overlap

--- a/src/components/card/modanteristcard.scss
+++ b/src/components/card/modanteristcard.scss
@@ -1,8 +1,6 @@
 .card {
   max-width: 16rem;
-  li {
-    p {
-      margin-bottom: 0;
-    }
+  .card-action {
+    z-index: 1;
   }
 }
